@@ -1,5 +1,5 @@
 .\" Text automatically generated by txt2man
-.TH TURN 1 "05 January 2021" "" ""
+.TH TURN 1 "07 January 2021" "" ""
 .SH GENERAL INFORMATION
 
 The \fBTURN Server\fP project contains the source code of a TURN server and TURN client
@@ -230,6 +230,10 @@ Extra verbose mode, very annoying and not recommended.
 .B
 \fB\-o\fP, \fB\-\-daemon\fP
 Run server as daemon.
+.TP
+.B
+\fB\-\-systemd\fP
+Notify systemd about server status. (Use only in forground!)
 .PP
 \fB\-\-no\-software\-attribute\fP Production mode: hide the software version.
 .TP
